# CacheMicrobench

./: .gitignore  CMakeLists.txt
benchsets/: opc.lua  seq_read_16B_with_threads.lua  seq_read_64B_with_threads.lua  seq_write_64B_with_threads.lua  unifrom_read_16B_with_threads.lua  unifrom_read_64B_with_threads.lua
data_handler/: microbench_handler.py  pm_output.csv  pmwatch_handler.py  ycsbc_handler.py  ycsbc_log_handler.py
data_plot/: thread1_8B.csv  thread_1_valuesize_1KB.csv  thread_1_valuesize_8B.csv  thread_8_valuesize_1KB.csv  thread_8_valuesize_8B.csv
data_plot/breakdown/: draw_breakdown.plt
data_plot/microbench/: draw_basic_operation.plt
data_plot/no_pbrb/: draw_thread1_1KB.plt  draw_thread1_8B.plt  draw_thread8_1KB.plt  draw_thread8_8B.plt
data_plot/with_pbrb/: Makefile  draw_thread1_1KB.plt  draw_thread1_8B.plt
include/: dont_optimize_away.h  generator.h  histogram.h  logging.h  memory_ops.h  numa_config.h  pmem_ops.h  profiler.h  sequential_generator.h  statistics.h  time_measurement.h  uniform_generator.h  zipfian_generator.h
scripts/: get_tsc_khz.sh
src/: basicop_perf.cc  histogram.cc  memcpy_perf.cc  set_affinity.cc
tools/: cpu-topology.py  get-numa-config.sh  get-tsc-khz.sh
utils/: dont_optimize_away.cc  histogram.cc
